--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ exclude = [
 [dependencies]
 async-process = { version = "2.3.0", optional = true }
 futures-lite = { version = "2.6.0", optional = true }
+schemars = "0.8.21"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = { version = "1.0.138" }
 serde_path_to_error = "0.1"
@@ -31,6 +32,7 @@ tokio = { version = "1.43.0", optional = true, features = ["process", "io-util"]
 [dev-dependencies]
 datatest-stable = "0.3.2"
 serial_test = "3.2.0"
+tempfile = "3.16.0"
 
 [[test]]
 name = "deserialize"
