--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ exclude = [
 
 [dependencies]
 async-process = { version = "2.3.0", optional = true }
+derive-new = "0.7.0"
+derive_builder = "0.20.2"
 futures-lite = { version = "2.6.0", optional = true }
 schemars = "0.9.0"
 serde = { version = "1.0.219", features = ["derive"] }
